--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </svg>
         </button>
         <a class="nav-link" href="/">Home</a>
-        <a class="nav-link" href="/app">App</a>
+        <a class="nav-link" href="./app">App</a>
       </div>
     </div>
   </nav>
